--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -726,42 +726,38 @@ async function showTaskDetails(task) {
 async function finishTask(userName, task, button, selectedDate) {
     const today = selectedDate;
 
-    // Setup completions for this day
-    if (!task.completions) task.completions = {};
-    if (!Array.isArray(task.completions[today])) task.completions[today] = [];
-
     const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    const completionsToday = task.completions[today];
-    const currentTurn = (task.turnByDate?.[today]) || task.turn || task.users[0];
+    // Initialize completions array
+    if (!task.completions) task.completions = {};
+    if (!Array.isArray(task.completions[today])) task.completions[today] = [];
 
-    // ✅ Prevent double-finish by same user
+    const currentTurn = (task.turnByDate?.[today]) || task.turn || task.users[0];
+    const completionsToday = task.completions[today];
+
+    // Prevent exceeding repeat count by same user
     const userCount = completionsToday.filter(u => u === userName).length;
     if (userCount >= repeatLimit) return;
 
     // ✅ Add user completion
     completionsToday.push(userName);
 
-    // ✅ Check if currentTurn has completed enough times
-    const currentTurnCount = completionsToday.filter(u => u === currentTurn).length;
-    if (currentTurnCount >= repeatLimit) {
+    // ✅ Rotate turn immediately if currentTurn user did the action
+    if (!task.turnByDate) task.turnByDate = {};
+    if (userName === currentTurn) {
         const currentIndex = task.users.indexOf(currentTurn);
         const nextIndex = (currentIndex + 1) % task.users.length;
-        const nextTurn = task.users[nextIndex];
-        if (!task.turnByDate) task.turnByDate = {};
-        task.turnByDate[today] = nextTurn;
+        task.turnByDate[today] = task.users[nextIndex];
     } else {
-        // Even if not rotating, save currentTurn in case it wasn't there before
-        if (!task.turnByDate) task.turnByDate = {};
-        task.turnByDate[today] = currentTurn;
+        task.turnByDate[today] = currentTurn; // preserve current turn
     }
 
     // Save to backend
     await saveTaskToBackend(task);
 
-    // ✅ Give reward
+    // Reward logic
     const rewardAmount = Number(task.reward) || 0;
     const adminEmail = localStorage.getItem("currentAdminEmail");
     if (adminEmail && rewardAmount > 0) {
@@ -772,15 +768,11 @@ async function finishTask(userName, task, button, selectedDate) {
         });
     }
 
-    // ✅ Visual feedback and reload
     if (typeof triggerHoneyRain === 'function') triggerHoneyRain(rewardAmount);
-
-    // ✅ Reload task list (this is the fix for your case!)
     if (typeof loadTasksForDate === 'function') loadTasksForDate(today);
     if (typeof loadUserTasks === 'function') loadUserTasks(userName, today);
     if (typeof loadUserReward === 'function') loadUserReward(userName);
 }
-
 
 
 
