--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -543,28 +543,27 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 function getTurnForDate(task, selectedDateStr) {
     const userOrder = [...task.users];
-    const completions = task.completions?.[selectedDateStr] || [];
-
-    // Check how many completions already happened today
-    const totalCompletionsToday = completions.length;
-
-    // If task is Daily and has multiple completions per day
+    const selectedDate = new Date(selectedDateStr);
     let repeatLimit = 1;
     if (task.repeat === "Daily") repeatLimit = task.timesPerDay || 1;
     if (task.repeat === "Weekly") repeatLimit = task.timesPerWeek || 1;
     if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
-    if (totalCompletionsToday >= repeatLimit) {
-        // If completed fully, rotate to next starting user for tomorrow
-        const lastUser = completions[completions.length - 1];
-        const lastIndex = userOrder.indexOf(lastUser);
-        return userOrder[(lastIndex + 1) % userOrder.length];
-    } else {
-        // In-progress: assign based on completion index
-        const index = totalCompletionsToday % userOrder.length;
-        return userOrder[index];
+    // Count all completions from the task start date up to selectedDate (inclusive)
+    let totalCompletions = 0;
+    if (task.completions) {
+        for (const [dateStr, users] of Object.entries(task.completions)) {
+            const d = new Date(dateStr);
+            if (d <= selectedDate) {
+                totalCompletions += Array.isArray(users) ? users.length : 0;
+            }
+        }
     }
+
+    const index = totalCompletions % userOrder.length;
+    return userOrder[index];
 }
+
 
 
 
@@ -620,8 +619,9 @@ async function loadTasksForDate(selectedDate) {
 
         const userOrder = [...task.users];
         const currentTurn = getTurnForDate(task, selectedDate);
-        const nextIndex = (userOrder.indexOf(currentTurn) + 1) % userOrder.length;
-        const nextUser = userOrder[nextIndex];
+        const currentIndex = userOrder.indexOf(currentTurn);
+const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+
 
         const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
         const completedCount = completedUsers.length;
@@ -674,8 +674,9 @@ async function showTaskDetails(task) {
     if (task.repeat === "Monthly") repeatLimit = task.timesPerMonth || 1;
 
     const currentTurn = getTurnForDate(task, selectedDate);
-    const nextIndex = (userOrder.indexOf(currentTurn) + 1) % userOrder.length;
-    const nextUser = userOrder[nextIndex];
+    const currentIndex = userOrder.indexOf(currentTurn);
+const nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+
 
     const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     const completedCount = completedUsers.length;
